k8s/base/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-ui
  namespace: portfolio
spec:
  selector: { app: portfolio-ui }
  ports:
    - name: http
      port: 80
      targetPort: 80
