k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: portfolio.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: portfolio-ui, port: { number: 80 } }
          - path: /api
            pathType: Prefix
            backend:
              service: { name: portfolio-api, port: { number: 80 } }
